<resources>
    <string name="app_name">匠心</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_account_hint">请输入账户</string>
    <string name="sign_in_password_hint">请输入密码</string>
    <string name="sign_in">登录</string>
    <string name="sign_up">注册</string>
    <string name="skip">跳过</string>
    <string name="remember_account">记住账号</string>
    <string name="sign_up_email_hint">请输入邮箱</string>
    <string name="login_sign_up">现在成为匠心一员</string>
    <string name="login_sign_in">现在登录匠心</string>
    <string name="sign_up_failed">注册失败</string>
    <string name="sign_in_failed">登录失败</string>
    <string name="main_activity_home">主页</string>
    <string name="main_activity_plaza">广场</string>
    <string name="main_activity_moments">发布</string>
    <string name="main_activity_shopping">商城</string>
    <string name="main_activity_personal">我</string>
    <string name="fragment_personal_me">我</string>
    <string name="tourist">游客</string>
    <string name="fragment_sub_personal_profiles_gender">性别</string>
    <string name="fragment_sub_personal_profiles_age">年龄</string>
    <string name="fragment_sub_personal_profiles_school">学校</string>
    <string name="fragment_sub_personal_profiles_tag">标签</string>
    <string name="fragment_personal_moments">我的发布</string>
    <string name="fragment_personal_collections">我的收藏</string>
    <string name="fragment_personal_message">我的消息</string>
    <string name="fragment_personal_profiles">个人资料</string>
    <string name="fragment_personal_log_out">退出登录/切换账户</string>
    <string name="fragment_personal_login">登录/注册</string>
    <string name="fragment_personal_idols">我的关注</string>
    <string name="fragment_personal_followers">我的粉丝</string>
    <string name="fragment_moments_block_tips">你现在还没有登录，赶紧去登录吧~</string>
    <string name="fragment_image_select_pics">图片选择</string>
    <string name="fragment_image_moments">动态</string>
    <string name="fragment_image_publish">发布</string>
    <string name="fragment_image_edit_text_hint">请在这里输入你的文字...</string>
    <string name="fragment_image_text_limit">%d字/140字</string>
    <string name="fragment_image_text_limit_zero">0字/140字</string>
    <string name="fragment_image_insert_pics">插入图片</string>
    <string name="fragment_image_tag">标签</string>
    <string name="fragment_image_drawings">插画</string>
    <string name="fragment_image_buildings">建筑</string>
    <string name="fragment_image_handwork">手工</string>
    <string name="fragment_image_sculptures">雕塑</string>
    <string name="fragment_image_graphics">平面</string>
    <string name="fragment_image_limit">%d张/9张</string>
    <string name="fragment_image_limit_zero">0张/9张</string>
    <string name="fragment_plaza_category">广场</string>
    <string name="like">赞</string>
    <string name="collect">收藏</string>
    <string name="comment">评论</string>
    <string name="time_sort">按时间排序</string>
    <string name="hot_sort">按热度排序</string>
    <string name="collect_sort">按收藏排序</string>
    <string name="fragment_detail_comment">发表评论</string>
    <string name="fragment_detail_list">评论列表</string>
    <string name="loading">加载中</string>
    <string name="fragment_others_profiles_profiles">Ta的资料</string>
    <string name="fragment_home_pics_text">每日精选图片</string>

</resources>
