<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#FFF">

        <TextView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/fragment_others_profiles_profiles"
            android:textColor="#ff000000"/>

        <ImageView
            android:id="@+id/fragment_others_profiles_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#aaa"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fragment_sub_others_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <pl.droidsonroids.gif.GifTextView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textSize="17sp"
            android:drawableBottom="@drawable/ic_loading"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/fragment_others_profiles_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="170dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/fragment_sub_others_head_portrait"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/head_portrait"/>

            <TextView
                android:id="@+id/fragment_sub_others_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_sub_others_head_portrait"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textSize="22sp"
                android:text="@string/tourist"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="#aaa"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#ffffff">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_sub_personal_profiles_gender"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:id="@+id/fragment_sub_others_profiles_gender_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="NULL"
                    android:gravity="center">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#ffffff">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_sub_personal_profiles_age"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:id="@+id/fragment_sub_others_profiles_age_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="NULL"
                    android:gravity="center">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#ffffff">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_sub_personal_profiles_school"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:id="@+id/fragment_sub_personal_others_school_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="NULL"
                    android:gravity="center">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#ffffff">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_sub_personal_profiles_tag"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:id="@+id/fragment_sub_others_profiles_tag_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="NULL"
                    android:gravity="center">
                </TextView>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>