<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/fragment_detail_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#FFF">

        <TextView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/fragment_detail_list"
            android:textColor="#ff000000"/>

        <ImageView
            android:id="@+id/fragment_detail_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#aaa"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/fragment_detail_linear_layout"
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:visibility="gone">

        <EditText
            android:id="@+id/fragment_detail_edit_text"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="40dp"
            android:scrollbars="vertical"
            android:background="@drawable/edit_box_background"/>

        <Button
            android:id="@+id/fragment_detail_comment"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:text="@string/fragment_detail_comment"
            android:background="@drawable/fragment_unseleted_button"
            android:textSize="17sp"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/fragment_detail_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/fragment_detail_tool_bar"
        android:visibility="visible">

        <pl.droidsonroids.gif.GifTextView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textSize="17sp"
            android:drawableBottom="@drawable/ic_loading"/>

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_detail_recycler_view"
        android:layout_below="@id/fragment_detail_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/fragment_detail_linear_layout"
        android:visibility="gone">

    </android.support.v7.widget.RecyclerView>

</RelativeLayout>