<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#FFF">

        <ImageView
            android:id="@+id/fragment_sub_plaza_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"/>

        <TextView
            android:id="@+id/fragment_sub_plaza_title"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#ff000000"/>

        <ImageView
            android:id="@+id/fragment_sub_plaza_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#aaa"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="#FFFFFF">

        <Button
            android:id="@+id/time_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time_sort"
            android:drawableRight="@drawable/ic_up"
            android:paddingRight="5dp"
            android:background="#FFFFFF"/>

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#aaa"/>

        <Button
            android:id="@+id/hot_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hot_sort"
            android:drawableRight="@drawable/ic_up"
            android:paddingRight="5dp"
            android:background="#FFFFFF"/>

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#aaa"/>

        <Button
            android:id="@+id/collect_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/collect_sort"
            android:drawableRight="@drawable/ic_up"
            android:paddingRight="5dp"
            android:background="#FFFFFF"/>

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#aaa"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#aaa"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_sub_plaza_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>